-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.0

Breaking Changes:
- show_source: "show_source" removed to prepare for text editor widget in 0.6

Updates:
- Standard Windows: metrics/debug/about/style/docs etc. are truely widgets now.
- MacOs:            minimum now Mojava

New Commands:
- Misc: Added "get_managed_column_width" command
- Misc: Added "add_character_remap" command
- Misc: Added "set_primary_window" command
- Misc: Added "add_metrics_window" command
- Misc: Added "add_debug_window" command
- Misc: Added "add_about_window" command
- Misc: Added "add_style_window" command
- Misc: Added "add_documentation_window" command

New Keywords:
- start_dearpygui:    Added "primary_window" keyword
- add_checkbox:		  Added "enabled" keyword
- add_radio_button:   Added "enabled" keyword
- add_listbox:		  Added "enabled" keyword
- add_combo:		  Added "enabled" keyword
- add_input_text:	  Added "enabled" keyword
- add_input_int:	  Added "enabled" keyword
- add_input_int2:	  Added "enabled" keyword
- add_input_int3:	  Added "enabled" keyword
- add_input_int4:	  Added "enabled" keyword
- add_input_float:	  Added "enabled" keyword
- add_input_float2:	  Added "enabled" keyword
- add_input_float3:	  Added "enabled" keyword
- add_input_float4:	  Added "enabled" keyword
- add_drag_int:		  Added "enabled" keyword
- add_drag_int2:	  Added "enabled" keyword
- add_drag_int3:	  Added "enabled" keyword
- add_drag_int4:	  Added "enabled" keyword
- add_drag_float:	  Added "enabled" keyword
- add_drag_float2:    Added "enabled" keyword
- add_drag_float3:    Added "enabled" keyword
- add_drag_float4:    Added "enabled" keyword
- add_slider_int:	  Added "enabled" keyword
- add_slider_int2:	  Added "enabled" keyword
- add_slider_int3:	  Added "enabled" keyword
- add_slider_int4:	  Added "enabled" keyword
- add_slider_float:	  Added "enabled" keyword