@@ -36,6 +36,7 @@ Updates:
 - MacOs:            minimum now Mojava
 
 New Commands:
+- Misc: Added "set_managed_column_width" command
 - Misc: Added "get_managed_column_width" command
 - Misc: Added "add_character_remap" command
 - Misc: Added "set_primary_window" command
